# yapapi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .requirements.txt  404.html  README.md  cli_example.sh  event_bus_example.py  example.py  index.html  mypy  mypy.sh  offers.py  pydoc-markdown.yml  pyproject.toml  run.py  run_all.sh  scores.sh  sitemap.xml  t1.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: add-to-sdk-team-project.yml  build.yml  build_publish.yml  goth-nightly.yml  goth-stable.yml  goth-unstable.yml  goth.yml  integration.yml  tests.yml
docs/: Low-Level-Api.md  VM-Tutorial.md
docs/Low-Level-Api/: index.html
docs/VM-Tutorial/: index.html
docs/diagrams/: README.md  classes.puml  ctrl-c.puml  emit_events_async.puml  emit_events_summary.puml  execute_tasks.puml  process_batches.puml  run_service.puml
docs/mid_sphinx/: api.rst  index.rst
docs/sphinx/: api.rst  api_reference.rst  conf.py  index.rst
examples/: blender.Dockerfile  blender.py  interactive-requestor.py  run-blender.sh  utils.py
examples/ai_runtime/: README.md  ai_runtime.py
examples/blender/: blender-async-results.py  blender-deprecated.py  blender-golem.py  blender.py  blender_registry_usage.py  fishy_cat.blend  fishy_cat.py  start_stop_blender.py
examples/chainlink/: Dockerfile  chainlink.py  job.txt
examples/custom-usage-counter/: README.md  custom_usage_counter.py
examples/custom_runtime/: custom_runtime.py
examples/custom_usage_counter/: custom_usage_counter.py
examples/download-local-video/: Dockerfile  download_local_video.py  request.sh  sign.sh
examples/drone/: drone.py  task.sh
examples/environment-variables/: environment_variables.py
examples/erigon/: erigon.py
examples/external-api-request/: Dockerfile  blender_manifest.json  blender_manifest.json.base64  blender_manifest.py  external_api_request.py  external_api_request_partner.py  golem_requestor.cert.pem  golem_sign.pem  http_proxy_manifest.json  http_proxy_manifest.json.base64  http_proxy_manifest.py  manifest.json  manifest.json.base64  manifest.json.base64.sha256.sig  manifest_partner_unrestricted.json  manifest_whitelist.json  partner_rule_poc.md  request.sh  scan_manifest.json  scan_manifest.json.base64  scan_manifest.py  sign.sh  ssh_manifest.json  ssh_manifest.json.base64  ssh_manifest.py
examples/external-api-request/sign_manifest/: pyproject.toml  sign.py
examples/external_api_request/: external_api_request.py
examples/hello-world/: Dockerfile  hello-service.py  hello.py  hello_gvmi_url.py  hello_service.py
examples/http-proxy/: Dockerfile  http_proxy.py
examples/http_proxy/: http_proxy.py
examples/http_server/: http_server.Dockerfile  http_server.py  index.html  run-http-server.sh
examples/huge-output-command/: .gitignore  Dockerfile  README.md  create_input_file.sh  output_command.py
examples/low-level-api/: list-nodes.py  list-offers.py
examples/market-strategy/: market_strategy.py  most_efficient_provider_strategy.py
examples/market_strategy/: market_strategy.py
examples/measure_download_time/: manifest.json  measure_download_time.py  request.sh
examples/outbound-gateway/: manifest.json  outbound-gateway.py
examples/scan/: scan.py
examples/service/: http_test.py  simple_service.py
examples/simple-service-poc/: new_simple_service.py  simple_service.py
examples/simple_service_poc/: simple_service.py
examples/ssh/: .gitignore  Dockerfile  ssh.py
examples/transcoding/: ffmpeg.Dockerfile  run-ffmpeg.sh  transcode.py
examples/transfer-progress/: progress.py
examples/turbogeth/: turbogeth.py
examples/utils/: __init__.py
examples/vpn-ts/: vpn-ts.py
examples/webapp/: README.md  webapp.py  webapp_suspend_resume.py
examples/webapp_fileupload/: webapp_fileupload.py
examples/yacat/: .gitignore  README.md  yacat.Dockerfile  yacat.py
handbook_gen/: handbook_gen.py
handbook_gen/sphinx/: conf.py  index.rst
handbook_gen/templates/: summary.mako
reference/yapapi/: index.html
search/: search_index.json
t/: test_1.py
tests/: conftest.py  test_add_event_consumer.py  test_agreements_pool.py  test_async_wrapper.py  test_config.py  test_ctx.py  test_engine.py  test_invalid_state_error.py  test_log.py  test_net.py  test_network.py  test_payment_platforms.py  test_strategy.py  test_utils.py  test_yapapi.py
tests/compose/: test_parser.py
tests/counters/: custom-counters.py
tests/drone/: Dockerfile  drone.py
tests/engine/: test_debit_note_intervals.py  test_engine.py
tests/events/: test_frozen.py  test_repr.py
tests/executor/: test_agreements_pool.py  test_async_wrapper.py  test_ctx.py  test_events.py  test_lookahead_iterator.py  test_payment_platforms.py  test_peekable_async_iterator.py  test_smartq.py  test_strategy.py  test_subtask.py  test_task.py
tests/factories/: __init__.py  agreements_pool.py  config.py  context.py  events.py  golem.py  net.py  network.py
tests/goth/: conftest.py  test_resubscription.py  test_run_blender.py  test_run_simple_service.py  test_run_yacat.py  test_simple_service.py
tests/goth_tests/: ___test_resubscription.py  _util.py  assertions.py  conftest.py  goth-config-testing.yml  test_power_outage.py  test_resubscription.py  test_run_blender.py  test_run_custom_usage_counter.py  test_run_scan.py  test_run_simple_service.py  test_run_ssh.py  test_run_webapp.py  test_run_yacat.py
tests/package/: test_vm.py  vm.py
tests/payload/: test_manifest.py  test_payload.py  test_repo.py  test_vm.py
tests/props/: test_base.py  test_builder.py  test_com.py  test_from_properties.py  test_from_props.py
tests/rest/: test_activity.py  test_allocation.py  test_builder.py  test_demand_builder.py  test_repeat_on_error.py  test_repeat_on_timeout.py
tests/runner/: test_ctx.py  test_smartq.py  (+1 more)
troubleshooting/: check_yagna.py
yagna/: check_yagna.py
yapapi/: __init__.py  __main__.py  agreements_pool.py  async_event_emitter.py  config.py  ctx.py  engine.py  event_dispatcher.py  events.py  golem.py  invoice_manager.py  log.py  net.py  network.py  services.py  strategy.py  utils.py
(+184 files in other folders)
