[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "yapapi"
version = "0.1.1"
description = "Hi-Level API for Golem The Next Milestone"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
license = "LGPL-3.0-or-later"
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AsyncIO",
    "Topic :: System :: Distributed Computing"
]
repository = "https://github.com/prekucki/yapapi"
documentation = "https://prekucki.github.io/yapapi/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
aiohttp = "^3.6"
dataclasses = { version = "^0.7", python = ">=3.6, <3.7"}
ya-market = "^0.1.0"
urllib3 = "^1.25.9"
typing_extensions = "^3.7.4"

fire = { version = "^0.3.1", optional = true }
rich = { version = "^2.2.5", optional = true }
async_exit_stack = "^1.0.1"
jsonrpc-base = "^1.0.3"
ya-client-activity = "^0.1.0"
ya-client-payment = "^0.1.0"

[tool.poetry.extras]
cli = ['fire', 'rich']


[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
portray = "^1"
pytest-asyncio = "^0.12.0"
mypy = "^0.782"

[tool.portray]

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue grey", accent = "pink"}

[tool.portray.pdocs]
exclude_source = true

[tool.black]
line-length = 100
target-version = ['py36']
